--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,28 @@
 *.lo
 *.la
 *.Po
-find_port
-autom4te.cache
-config.log
+
+*.dis
+*.rom
+*.mot
+
 .deps
 .libs
+
+generated_html
+autom4te.cache
+
+config.log
+
 get_distance
 get_distance_intensity
 get_multiecho
 get_multiecho_intensity
 sensor_parameter
 sync_time_stamp
+calculate_xy
+evaluate_timestamp
+find_port
+usb_joystick_view
+run_wired_controller
+urg_auto_recorder
