--- a/packages/urg_cpp_library/Makefile.am
+++ b/packages/urg_cpp_library/Makefile.am
@@ -2,3 +2,13 @@
 
 SUBDIRS = src sample
 bin_SCRIPTS = urg_cpp-config
+
+$(PACKAGE)-$(VERSION).tar.gz: dist
+
+zip: $(PACKAGE)-$(VERSION).tar.gz
+	$(RM) -rf $(PACKAGE)-$(VERSION)
+	tar zxf $(PACKAGE)-$(VERSION).tar.gz
+	find $(PACKAGE)-$(VERSION) -name '*.[ch]*' | xargs nkf -s --overwrite
+	zip -r $(PACKAGE)-$(VERSION).zip $(PACKAGE)-$(VERSION)/
+	$(RM) -rf $(PACKAGE)-$(VERSION)
+	$(RM) $(PACKAGE)-$(VERSION).tar.gz
