--- a/programs/Makefile
+++ b/programs/Makefile
@@ -5,9 +5,11 @@ all :
 	cd run_path_follower/ && $(MAKE)
 	cd run_wired_controller/ && $(MAKE)
 	cd urg_auto_recorder/ && $(MAKE)
+	cd run_urg_wired_recorder/ && $(MAKE)
 
 clean :
 	cd run_path_recorder/ && $(MAKE) clean
 	cd run_path_follower/ && $(MAKE) clean
 	cd run_wired_controller/ && $(MAKE) clean
 	cd urg_auto_recorder/ && $(MAKE) clean
+	cd run_urg_wired_recorder/ && $(MAKE) clean
