--- a/packages/urg_cpp_library/urg_cpp-config.in
+++ b/packages/urg_cpp_library/urg_cpp-config.in
@@ -19,7 +19,7 @@ while test $# -gt 0; do
       echo -I@includedir@/urg_cpp `urg_c-config --cflags`
       ;;
     --libs)
-      echo @INSTALL_LIBS@ `urg_c-config --libs`
+      echo @INSTALL_LIBS@
       ;;
     *)
       echo "${usage}" 1>&2
