--- a/programs/run_path_follower/samples/Makefile
+++ b/programs/run_path_follower/samples/Makefile
@@ -2,8 +2,7 @@
 
 CXXFLAGS = -g -O0 -Wall -Werror -W `urg_c-config --cflags`
 LDFLAGS =
-#LDLIBS = `urg_c-config --libs`
-LDLIBS = -lurg_c
+LDLIBS = `urg_c-config --libs`
 
 TARGET = get_multiecho
 
