update Makefile dependency

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -3,15 +3,19 @@
 all :
 	cd run_target/ && $(MAKE)
 	cd run/ && $(MAKE)
+	cd lidar/ && $(MAKE)
 	cd controller/ && $(MAKE)
 	cd gui/ && $(MAKE)
 	cd math/ && $(MAKE)
 	cd system/ && $(MAKE)
+	cd geometry/ && $(MAKE)
 
 clean :
 	cd run_target/ && $(MAKE) clean
 	cd run/ && $(MAKE) clean
+	cd lidar/ && $(MAKE) clean
 	cd controller/ && $(MAKE) clean
 	cd gui/ && $(MAKE) clean
 	cd math/ && $(MAKE) clean
 	cd system/ && $(MAKE) clean
+	cd geometry/ && $(MAKE) clean
