--- a/packages/urg_cpp_library/Makefile
+++ b/packages/urg_cpp_library/Makefile
@@ -105,14 +105,14 @@ FGREP = /bin/grep -F
 GREP = /bin/grep
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
-INSTALL_LIBS =  -lurg_cpp -lurg_c -lrt
+INSTALL_LIBS =  -lurg_c -lrt
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LD = /usr/i586-pc-linux/bin/ld
 LDFLAGS = 
 LIBOBJS = 
-LIBS =  -lurg_cpp -lurg_c -lrt
+LIBS =  -lurg_c -lrt
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
