--- a/libs/run_target/Makefile
+++ b/libs/run_target/Makefile
@@ -34,7 +34,7 @@ depend :
 
 .PHONY : all clean html upload
 ######################################################################
-run_drive.mot run_drive.rom run_drive.dis : run_drive.o setup_state.o control_state.o pause_state.o clock_initialize.o imask.o run_system.o connection.o connection_utilities.o protocol_handler.o sci_interrupt_read_write.o emergency_io_control.o timer_control.o path_follow.o position_handler.o velocity_handler.o body_control.o wheel_velocity.o motor_velocity.o motor_table_pwm.o motor_pwm.o encoder_reader.o odometry_calculate.o mtu2_initialize.o ring_buffer.o run_commands.o htoi.o itoh.o isin_icos.o #iatan2.o
+run_drive.mot run_drive.rom run_drive.dis : run_drive.o setup_state.o control_state.o pause_state.o clock_initialize.o imask.o run_system.o connection.o connection_utilities.o protocol_handler.o sci_interrupt_read_write.o emergency_io_control.o timer_control.o path_follow.o position_control.o velocity_control.o body_control.o wheel_velocity.o motor_velocity.o motor_table_pwm.o motor_pwm.o encoder_reader.o odometry_calculate.o mtu2_initialize.o ring_buffer.o run_commands.o htoi.o itoh.o isin_icos.o #iatan2.o
 
 isin_icos.c : create_isin_icos.rb
 	$(RUBY) $< > $@ || $(RM) $@
@@ -82,8 +82,8 @@ control_state.o: control_state.h run_t.h controller_config.h run_system_t.h
 control_state.o: odometry_t.h path_t.h wheel_t.h encoder_t.h motor_t.h
 control_state.o: imask.h interrupt_priority.h robot_parameter.h pause_state.h
 control_state.o: emergency_io_control.h timer_control.h protocol_handler.h
-control_state.o: encoder_reader.h odometry_calculate.h path_follow.h
-control_state.o: wheel_velocity.h
+control_state.o: run_system.h encoder_reader.h odometry_calculate.h
+control_state.o: path_follow.h body_control.h wheel_velocity.h
 emergency_io_control.o: emergency_io_control.h
 encoder_reader.o: encoder_reader.h encoder_t.h mtu2_initialize.h
 htoi.o: htoi.h
@@ -98,11 +98,11 @@ motor_velocity.o: motor_table_pwm.h motor_pwm.h encoder_reader.h encoder_t.h
 mtu2_initialize.o: mtu2_initialize.h
 odometry_calculate.o: odometry_calculate.h odometry_t.h robot_parameter.h
 odometry_calculate.o: controller_config.h isin_icos.h
-path_follow.o: path_t.h position_handler.h
+path_follow.o: path_t.h
 pause_state.o: pause_state.h run_t.h controller_config.h run_system_t.h
 pause_state.o: odometry_t.h path_t.h wheel_t.h encoder_t.h motor_t.h
 pause_state.o: emergency_io_control.h wheel_velocity.h
-position_handler.o: position_handler.h velocity_handler.h
+position_control.o: position_control.h velocity_control.h
 protocol_handler.o: protocol_handler.h run_t.h controller_config.h
 protocol_handler.o: run_system_t.h odometry_t.h path_t.h wheel_t.h
 protocol_handler.o: encoder_t.h motor_t.h connection.h connection_utilities.h
@@ -126,7 +126,7 @@ setup_state.o: emergency_io_control.h odometry_calculate.h path_follow.h
 setup_state.o: wheel_velocity.h protocol_handler.h interrupt_priority.h
 std_string.o: std_string.h
 timer_control.o: timer_control.h cpu_clock.h
-velocity_handler.o: velocity_handler.h
+velocity_control.o: velocity_control.h
 wheel_velocity.o: wheel_velocity.h wheel_t.h encoder_t.h motor_t.h
 wheel_velocity.o: robot_parameter.h encoder_reader.h motor_velocity.h
 wheel_velocity.o: motor_pwm.h
