path_follow.c is implemented. no test.

--- a/libs/run_target/Makefile
+++ b/libs/run_target/Makefile
@@ -9,8 +9,8 @@ RUBY = ruby
 CFLAGS_FOR_BUILD = -DHOST_COMPILE -O2 -m2 -Wall -Werror -W $(INCLUDES_FOR_BUILD)
 INCLUDES_FOR_BUILD =
 LDFLAGS_FOR_BUILD = -nostartfiles $(START_UP_FOR_BUILD)
-#LDLIBS_FOR_BUILD = -lgcc-Os-4-200
-LDLIBS_FOR_BUILD =
+LDLIBS_FOR_BUILD = -L/usr/share/gnush/lib/gcc/sh-elf/4.5-GNUSH_v10.03/mrenesas/m2/ -lgcc-Os-4-200
+#LDLIBS_FOR_BUILD =
 
 START_UP_FOR_BUILD = $(SOURCE_DIR)/crt0.S
 LD_LOAD_FOR_BUILD = $(SOURCE_DIR)/aki_sh7125_load.x
