--- a/libs/run_target/test/Makefile
+++ b/libs/run_target/test/Makefile
@@ -1,7 +1,7 @@
 # run_drive/test
 
 CC = $(CXX)
-CXXFLAGS = -g -O0 -Wall -Werror $(INCLUDES)
+CXXFLAGS = -DHOST_COMPILE -g -O0 -Wall -Werror $(INCLUDES)
 INCLUDES = -I..
 
 TARGET = \
@@ -21,7 +21,7 @@ test : all_test
 	./all_test
 
 ######################################################################
-TEST_OBJS = all_test.o Connection_utilities_test.o connection_dummy.o connection_utilities.o std_string.o Run_commands_test.o protocol_handler.o run_commands.o htoi.o itoh.o isin_icos.o odometry_calculate.o
+TEST_OBJS = all_test.o Connection_utilities_test.o connection_dummy.o connection_utilities.o std_string.o Run_commands_test.o protocol_handler.o run_commands.o htoi.o itoh.o isin_icos.o odometry_calculate.o imask.o
 
 
 motor_table_pwm_test : motor_table_pwm.o
@@ -64,6 +64,9 @@ isin_icos.o : ../isin_icos.c
 	$(CXX) $(CXXFLAGS) $< -c -o $@
 
 odometry_calculate.o : ../odometry_calculate.c
+	$(CXX) $(CXXFLAGS) $< -c -o $@
+
+imask.o : ../imask.c
 	$(CXX) $(CXXFLAGS) $< -c -o $@
 
 # DO NOT DELETE
